infra/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: system
  labels:
    name: system
---
apiVersion: v1
kind: Namespace
metadata:
  name: sandbox-workspaces
  labels:
    name: sandbox-workspaces
